--- a/tahap_pertama/5.tugas_discount.html
+++ b/tahap_pertama/5.tugas_discount.html
@@ -19,6 +19,9 @@
         </form>
         <h3>hasil diskon</h3>
         <p>harga setelah diskon : <span id="hasil2"></span></p>
+        <div class="footer" style="color: #666; font-size: 12px; margin-top: 30px;">
+            Dibuat pada 23/04/2025 oleh Rafa Khadafi
+        </div>
     </center>
 
     <script>
