--- a/tahap_pertama/11.tugas_trapesium.html
+++ b/tahap_pertama/11.tugas_trapesium.html
@@ -32,6 +32,9 @@
         <p>keliling : <span id="keliling"></span></p>
 
         <p>luas : <span id="luas"></span></p>
+        <div class="footer" style="color: #666; font-size: 12px; margin-top: 30px;">
+            Dibuat pada 23/04/2025 oleh Rafa Khadafi
+        </div>
     </center>
 
     <script>
