--- a/tahap_pertama/2.kertas_gunting_batu.html
+++ b/tahap_pertama/2.kertas_gunting_batu.html
@@ -29,6 +29,9 @@
     <span> Kesempatan : <span id="sisa_pilihan"></span> </span>
     <br /><br /><br />
     <button id="pilihan">pilih</button>
+    <div class="footer" style="color: #666; font-size: 12px; margin-top: 30px;">
+      Dibuat pada 23/04/2025 oleh Rafa Khadafi
+  </div>
     <script>
       let bantuan, angka;
       let sisa = 3; // Inisialisasi sisa di luar fungsi
