--- a/tahap_pertama/3.nilai_sekolah.html
+++ b/tahap_pertama/3.nilai_sekolah.html
@@ -43,6 +43,9 @@
     <h3>
         keterangan : <span id="keterangan">0</span>
     </h3>
+    <div class="footer" style="color: #666; font-size: 12px; margin-top: 30px;">
+        Dibuat pada 23/04/2025 oleh Rafa Khadafi
+    </div>
     <script>
         const button = document.getElementById("button");
         button.addEventListener("click", function () {
