--- a/tahap_pertama/4.nilai_ujian.html
+++ b/tahap_pertama/4.nilai_ujian.html
@@ -47,7 +47,9 @@
 
     
 
-
+    <div class="footer" style="color: #666; font-size: 12px; margin-top: 30px;">
+      Dibuat pada 23/04/2025 oleh Rafa Khadafi
+  </div>
     <script>
         const button = document.getElementById("button");
 button.addEventListener("click", function () {
