--- a/tahap_pertama/8.tugas_persegi.html
+++ b/tahap_pertama/8.tugas_persegi.html
@@ -16,6 +16,9 @@
         <h3>Hasil Perhitungan</h3>
         <p>Keliling: <span id="keliling"></span></p>
         <p>Luas: <span id="luas"></span></p>
+        <div class="footer" style="color: #666; font-size: 12px; margin-top: 30px;">
+            Dibuat pada 23/04/2025 oleh Rafa Khadafi
+        </div>
     </center>
 
     <script>
