--- a/tahap_pertama/9.tugas_segitiga.html
+++ b/tahap_pertama/9.tugas_segitiga.html
@@ -57,6 +57,9 @@
             <input type="number" id="sisi_c" placeholder="masukan sisi c">
         </form>
     </div>
+    <div class="footer" style="color: #666; font-size: 12px; margin-top: 30px;">
+        Dibuat pada 23/04/2025 oleh Rafa Khadafi
+    </div>
 </div>
 
     <script>
