--- a/tahap_kedua/24.menghitung_shalawat.html
+++ b/tahap_kedua/24.menghitung_shalawat.html
@@ -115,6 +115,13 @@
         }
         
 
+        document.addEventListener("keydown", function(event) {
+            if (event.key === "Enter") {
+                event.preventDefault();
+                hitungSholawat();
+            }
+        });
+
     </script>
 </body>
 </html>
